# StudentNodeElements

./: CMakeLists.txt  CruelGrader.cpp  GraderFactory.cpp  GradingHandler.cpp  OHARStudentLayerConfig.cmake  PlainStudentFileHandler.cpp  README.md  StudentDataItem.cpp  StudentFileReader.cpp  StudentFileWriter.cpp  StudentHandler.cpp  StudentInputHandler.cpp  StudentNetOutputHandler.cpp  StudentNodeElementsConfig.cmake  StudentWriterHandler.cpp  TheUsualGrader.cpp  doxyfile.in
include/OHARStudentLayer/: GradingHandler.h  PlainStudentFileHandler.h  StudentDataItem.h  StudentFileReader.h  StudentHandler.h  StudentNetOutputHandler.h  StudentWriterHandler.h
include/StudentNodeElements/: CruelGrader.h  GradingHandler.h  PlainStudentFileHandler.h  StudentDataItem.h  StudentFileReader.h  StudentHandler.h  StudentInputHandler.h  StudentNetOutputHandler.h  StudentWriterHandler.h  TheUsualGrader.h
